--- a/News_Classification_Project_Flask/requirements.txt
+++ b/News_Classification_Project_Flask/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.0
 bcrypt==3.2.0
+cffi==1.15.1
 click==8.1.2
+colorama==0.4.6
 dnspython==2.2.1
 email-validator==1.1.3
 Flask==2.1.1
@@ -8,15 +10,21 @@ Flask-Bcrypt==1.0.1
 Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
+greenlet==2.0.2
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+joblib==1.2.0
 MarkupSafe==2.1.1
+numpy==1.24.3
 pycparser==2.21
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 SQLAlchemy==1.4.35
 sqlparse==0.4.2
+threadpoolctl==3.1.0
 Werkzeug==2.1.1
 WTForms==3.0.1
 zipp==3.8.0
