--- a/News_Classification_Project_Flask/requirements.txt
+++ b/News_Classification_Project_Flask/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.6
 dnspython==2.2.1
 email-validator==1.1.3
 Flask==2.1.1
+Flask-Admin==1.6.1
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.0
 Flask-SQLAlchemy==2.5.1
